Fix compilation with old ffmpeg versions

Old ffmpeg versions are still used on some Yocto versions.

Fixes: QTBUG-111900
Change-Id: Ifccdbbc19c03e5fe127cbeaed21cc671de96cca0
Reviewed-by: Samuli Piippo <samuli.piippo@qt.io>
(cherry picked from commit d4a1ab3fc4f9f12943475cf1f57f6d8756729419)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>